[package]
name = "xedplay"
version = "0.1.0"
authors = ["TA Thanh Dinh <tathanhdinh@gmail.com>"]
edition = "2018"

[dependencies]
# xed-sys = { git = "https://github.com/tathanhdinh/xed-sys.git" }
xed-sys = { path = "../xed-sys" }
structopt = "0.2.10"
tabwriter = "1.1.0"
# quicli = { git = "https://github.com/killercup/quicli.git" }
lazy_static = "1.1.0"
maplit = "1.0.1"